Fixed logo width on small devices and removed black background

--- a/src/components/nav-buildit.css
+++ b/src/components/nav-buildit.css
@@ -1,5 +1,3 @@
-.ui.menu {background-color: rgb(0,0,0) !important;}
-
 .ui.inverted.menu .item, .ui.inverted.menu .item > a:not(.ui) {
   font-size: small;
 }
@@ -13,7 +11,7 @@
 }
 
 #home_desktop {
-  width:25%;
+  width: 55%;
   padding-top: 6px;
   padding-bottom: 30px;
   font-size: large !important;
